--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+alternc-php-fpm (3.4.2~octopuce) oldstable; urgency=low
+
+  * Fix dependencies on alternc-ssl
+
+ -- Thibault François <thibault@octopuce.fr>  Wed,  9 Sep 2020 12:12:12 +0200
+
 alternc-php-fpm (3.4.1~octopuce) oldstable; urgency=low
 
   * Fix support for PHP5.6
