--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+alternc-php-fpm (3.4.4~octopuce) oldstable; urgency=low
+
+  * Fixed mysql php7.4 fpm addition
+
+ -- Thibault François <thibault@octopuce.fr>  Mon,  24 Jan 2022 12:02:37 +0200
+
 alternc-php-fpm (3.4.3~octopuce) oldstable; urgency=low
 
   * Remove last dependencies on alternc-nss
