--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+alternc-php-fpm (3.5.1~octopuce) oldstable; urgency=low
+
+  * Add multiviews options in allowoverride + fix sync_unix
+
+ -- Benjamin Sonntag <benjamin@sonntag.fr>  Mon, 10 Oct 2022 12:19:12 +0200
+
 alternc-php-fpm (3.5~octopuce) oldstable; urgency=low
 
   * Add php8.{0,1} handling
